# Group01

./: .gitignore  README.md
onnx-interpreter/: Cargo.toml  build.rs  test.py
onnx-interpreter/models/mnist-12/test_dataset/images/: 1.pb  10.pb  100.pb  11.pb  12.pb  13.pb  14.pb  15.pb  16.pb  17.pb  18.pb  19.pb  2.pb  20.pb  21.pb  22.pb  23.pb  24.pb  25.pb  26.pb  27.pb  28.pb  29.pb  3.pb  30.pb  31.pb  32.pb  33.pb  34.pb  35.pb  36.pb  37.pb  38.pb  39.pb  4.pb  40.pb  41.pb  42.pb  43.pb  44.pb  (+60 more)
onnx-interpreter/models/mnist-12/test_dataset/labels/: 1.pb  10.pb  100.pb  11.pb  12.pb  13.pb  14.pb  15.pb  16.pb  17.pb  18.pb  19.pb  2.pb  20.pb  21.pb  22.pb  23.pb  24.pb  25.pb  26.pb  27.pb  28.pb  29.pb  3.pb  30.pb  31.pb  32.pb  33.pb  34.pb  35.pb  36.pb  37.pb  38.pb  39.pb  4.pb  40.pb  41.pb  42.pb  43.pb  44.pb  (+60 more)
onnx-interpreter/models/mnist-8/test_data_set_0/: test.pb
onnx-interpreter/models/resnet18-v1-7/test_dataset/images/: golden-retriever_55_0_orig.pb
onnx-interpreter/models/resnet18-v1-7/test_dataset/labels/: golden-retriever_55_0_orig.pb
onnx-interpreter/src/: auxiliary_functions.rs  display.rs  errors.rs  lib.rs  main.rs  utils_images.rs
onnx-interpreter/src/ops/: mod.rs  op_add.rs  op_batchnorm.rs  op_concat.rs  op_conv.rs  op_conv_optimized.rs  op_dropout.rs  op_flatten.rs  op_gemm.rs  op_globalaveragepooling.rs  op_matmul.rs  op_maxpool.rs  op_operator.rs  op_relu.rs  op_reshape.rs  op_softmax.rs
onnx-interpreter/src/parser_code/: mod.rs  onnx_data_proto3.rs  onnx_ml_proto3.rs  onnx_operators_ml_proto3.rs
rust-onnx/: Cargo.toml  build.rs  pyproject.toml
rust-onnx/protos/: onnx-data.proto3  onnx-ml.proto3  onnx-operators-ml.proto3
rust-onnx/py_rust_onnx/: test.py
rust-onnx/src/: auxiliary_functions.rs  display.rs  errors.rs  labels_mapping.rs  lib.rs  main.rs  utils_images.rs
rust-onnx/src/datasets/: images_serialization.rs  label_mappings.rs  mod.rs
rust-onnx/src/models/: models.rs
rust-onnx/src/onnx_parser/: mod.rs  parser.rs
rust-onnx/src/onnx_parser/protoc_generated/: onnx_ml_proto3.rs  onnx_operators_ml_proto3.rs
rust-onnx/src/operators/: mod.rs  op_add.rs  op_batchnorm.rs  op_conv_optimized.rs  op_flatten.rs  op_gemm.rs  op_globalaveragepooling.rs  op_matmul.rs  op_maxpool.rs  op_operator.rs  op_relu.rs  op_reshape.rs  operators.rs
rust-onnx/src/ops/: mod.rs  op_add.rs  op_batchnorm.rs  op_conv_optimized.rs  op_flatten.rs  op_globalaveragepooling.rs  op_matmul.rs  op_maxpool.rs  op_operator.rs  op_relu.rs
rust-onnx/src/utils/: auxiliary_functions.rs  display.rs  errors.rs  menu.rs  mod.rs  run.rs  serialization_utils.rs  shared.rs
