[package]
name = "onnx-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"

[dependencies]
ndarray = "0.15.6"
protobuf = "3.2.0"
image = "0.23.14"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
byteorder = "1.4"
