[package]
name = "onnx-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "onnxinterpreter"
crate-type = ["cdylib"]

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"

[dependencies]
ndarray = "0.15.6"
protobuf = "3.2.0"
image = "0.23.14"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
byteorder = "1.4"


[dependencies.pyo3]
version = "0.19.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py37"]
