[package]
name = "rust_onnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_onnx"
crate-type = ["cdylib"]

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"

[dependencies]
ndarray = "0.15.6"
protobuf = "3.2.0"
byteorder = "1.4"
maturin = "1.4.0"
dialoguer = "0.11.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
prettytable-rs = "0.10.0"
colored = "2.1.0"
image = "0.24.7"
regex = "1.10.2"
rayon = "1.8.0"
clearscreen = "2.0.1"
petgraph = "0.6.4"


[dependencies.pyo3]
version = "0.19.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py37"]
